Ignore intellij files

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ storage/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+/.idea
+/laravel-elasticbeanstalk-corn.iml
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
