--- a/src/.ebextensions/99scheduler.config
+++ b/src/.ebextensions/99scheduler.config
@@ -1,5 +1,7 @@
 container_commands:
+  # Adds a cron entry that checks for leader selection every 5 minutes
   runLeaderSelectionCRON:
-    command: "php artisan system:start:leaderselection" # Adds a cron entry that checks for leader selection every 5 minutes
+    command: sudo -u webapp bash -c ". /opt/elasticbeanstalk/support/envvars ; /usr/bin/php artisan system:start:leaderselection"
+  # Does an initial leader selection check
   runLeaderSelection:
-    command: "php artisan aws:configure:leader" # Does an initial leader selection check
+    command: sudo -u webapp bash -c ". /opt/elasticbeanstalk/support/envvars ; /usr/bin/php artisan aws:configure:leader"
