--- a/src/.ebextensions/99scheduler.config
+++ b/src/.ebextensions/99scheduler.config
@@ -1,4 +1,7 @@
 container_commands:
+  # Crontab will place cron tasks as root if the user doesn't have a home directory.
+  ensureWebappCanRunCron:
+    command: sudo mkdir -p /home/webapp ; sudo chown -R webapp:webapp /home/webapp
   # Adds a cron entry that checks for leader selection every 5 minutes
   runLeaderSelectionCRON:
     command: sudo -u webapp bash -c ". /opt/elasticbeanstalk/support/envvars ; /usr/bin/php artisan system:start:leaderselection"
