Implement Laravel 5.5's package auto discovery

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,12 @@
         "psr-4": {
             "FoxxMD\\LaravelElasticBeanstalkCron\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "FoxxMD\\LaravelElasticBeanstalkCron\\ElasticBeanstalkCronProvider"
+            ]
+        }
     }
 }
