--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "illuminate/support": "~8.0",
+        "illuminate/support": "5 - 8",
+        "illuminate/console": "5 - 8",
         "aws/aws-sdk-php": "^3.26",
-        "illuminate/console": "~8.0",
         "lstrojny/functional-php": "^1.2"
     },
     "autoload": {
